fix spacing bug tweet content add div and move id content to div

--- a/public/styles/existing-tweet.css
+++ b/public/styles/existing-tweet.css
@@ -51,3 +51,7 @@
   display:flex;
   justify-content: space-between;
 }
+
+.tweet-footer-right {
+  display:flex;
+}
